lab-k8s/managed-certificates/managed-cert-ingress-snsapi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress-snsapi
  annotations:
    kubernetes.io/ingress.global-static-ip-name: vuscgrpsnsapi
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: sns-api-service
      port:
        number: 5000
